--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=profileUpdate
 url-properties.profileLoaderBaseUrl=http://localhost:8081/
 
 url-properties.profileLoaderGetIndividual=v1/individual
-url-properties.profileLoaderGetDocument=v1/document
+url-properties.profileLoaderGetDocuments=v1/document
 url-properties.profileLoaderGetContactMedium=v1/contactMedium
 url-properties.profileLoaderGetAvatar=v1/avatar
 url-properties.profileLoaderGetAddress=v1/address
@@ -14,7 +14,13 @@ url-properties.profileLoaderPostDocuments=v1/document
 url-properties.profileLoaderPostContactMedium=v1/contactMedium
 url-properties.profileLoaderPostAvatar=v1/avatar
 url-properties.profileLoaderPostAddress=v1/address
+url-properties.profileLoaderGetWalletByMobileAndCurrency=v1/wallet/byMobileAndCurrency
+url-properties.profileLoaderPatchWallet=v1/wallet
 
 #KafkaConfig
 spring.kafka.bootstrap-servers=localhost:9092
 kafka.topic.create=contact-update-topic
+spring.kafka.consumer.group-id=profile-update
+
+kafka.topic.credit-transfer-succeed=creditTransferSucceed
+kafka.topic.credit-transfer-created=creditTransferCreated
