добавил зависимости и прописал пропертиc для мониторинга Прометеус

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <javafaker.version>0.18</javafaker.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <prometheus.version>1.12.0</prometheus.version>
     </properties>
 
     <dependencies>
@@ -70,6 +71,17 @@
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
             <version>${javafaker.version}</version>
+        </dependency>
+        <!--        Зависимости для Prometheus -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>${prometheus.version}</version>
         </dependency>
     </dependencies>
 
