--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ url-properties.profileLoaderPostAddress=v1/address
 #KafkaConfig
 spring.kafka.bootstrap-servers=localhost:9092
 kafka.topic.create=contact-update-topic
+
+# Monitoring system Prometheus
+management.endpoints.web.exposure.include=health, prometheus
+management.metrics.export.prometheus.enabled=true
+management.metrics.distribution.percentiles-histogram."[http.server.requests]"=true
