Task 63 completed spring boot 2.6.3 spring cloud 2021.0.3 kafka 2.8.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8086
 spring.application.name=profileUpdate
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 #URL
 url-properties.profileLoaderBaseUrl=http://localhost:8081/
